@@ -20,11 +20,11 @@
 	<rule ref="category/java/bestpractices.xml/CheckResultSet" />
 	<rule ref="category/java/bestpractices.xml/ConstantsInInterface" />
 	<rule ref="category/java/bestpractices.xml/DefaultLabelNotLastInSwitchStmt" />
-	<rule ref="category/java/bestpractices.xml/JUnit4SuitesShouldUseSuiteAnnotation" />
+	<!--<rule ref="category/java/bestpractices.xml/JUnit4SuitesShouldUseSuiteAnnotation" />-->
 	<rule ref="category/java/bestpractices.xml/JUnit4TestShouldUseAfterAnnotation" />
 	<rule ref="category/java/bestpractices.xml/JUnit4TestShouldUseBeforeAnnotation" />
 	<rule ref="category/java/bestpractices.xml/JUnit4TestShouldUseTestAnnotation" />
-	<rule ref="category/java/bestpractices.xml/JUnitAssertionsShouldIncludeMessage" />
+	<!--<rule ref="category/java/bestpractices.xml/JUnitAssertionsShouldIncludeMessage" />-->
 	<rule ref="category/java/bestpractices.xml/JUnitTestContainsTooManyAsserts" />
 	<rule ref="category/java/bestpractices.xml/JUnitTestsShouldIncludeAssert" />
 	<rule ref="category/java/bestpractices.xml/JUnitUseExpected" />
