@@ -18,14 +18,14 @@
 package ru.mystamps.web.feature.category;
 
 import org.assertj.core.api.WithAssertions;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.JdbcTest;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.jdbc.Sql;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import ru.mystamps.web.config.DaoConfig;
 import ru.mystamps.web.tests.Random;
 
@@ -43,7 +43,7 @@ import java.util.Map;
 	},
 	// @todo #1143 Improve a way of importing properties files in the tests
 	locations = "/sql/category_dao_queries.properties")
-@RunWith(SpringRunner.class)
+@ExtendWith(SpringExtension.class)
 public class JdbcCategoryDaoTest implements WithAssertions {
 	
 	@Autowired
