@@ -1,4 +1,5 @@
 0.x (upcoming release)
+(infrastructure) migrate to JUnit 5
 
 0.4.5
 (infrastructure) migrate to Spring Boot 2.1
